<resources>
    <string name="app_name">project_agregator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Zadanie 1</string>
    <string name="menu_gallery">Zadanie 2</string>
    <string name="menu_slideshow">Zadanie 3</string>
    <string name="z4">Zadanie 4</string>
    <string name="z5">Zadanie 5</string>
    <string name="z6">Zadanie 6</string>
    <string name="z7">Zadanie 7</string>
    <string name="z8">Zadanie 8</string>
    <string name="z9">Zadanie 9</string>
    <string name="z10">Zadanie 10</string>
    <string name="z11">Zadanie 11</string>
    <string name="z12">Zadanie 12</string>
    <string name="z13">Zadanie 13</string>
    <string name="z14">Zadanie 14</string>
    <string name="z15">Zadanie 15</string>
    <string name="z16">Zadanie 16</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>