<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project_agregator.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.project_agregator.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.project_agregator.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/zad4_d"
        android:name="com.example.project_agregator.ui.zad4.Zad4_fr"
        android:label="@string/z4"
        tools:layout="@layout/fragment_zad4" />
    <fragment
        android:id="@+id/zad5_d"
        android:name="com.example.project_agregator.ui.zad5.zad5_fr"
        android:label="@string/z5"
        tools:layout="@layout/fragment_zad5" />
    <fragment
        android:id="@+id/zad6_d"
        android:name="com.example.project_agregator.ui.zad6.zad6_fr"
        android:label="@string/z6"
        tools:layout="@layout/fragment_zad6" />
    <fragment
        android:id="@+id/zad7_d"
        android:name="com.example.project_agregator.ui.zad7.zad7_fr"
        android:label="@string/z7"
        tools:layout="@layout/fragment_zad7" />
    <fragment
        android:id="@+id/zad8_d"
        android:name="com.example.project_agregator.ui.zad8.zad8_fr"
        android:label="@string/z8"
        tools:layout="@layout/fragment_zad8" />
    <fragment
        android:id="@+id/zad9_d"
        android:name="com.example.project_agregator.ui.zad9.zad9_fr"
        android:label="@string/z9"
        tools:layout="@layout/fragment_zad9" />
    <fragment
        android:id="@+id/zad10_d"
        android:name="com.example.project_agregator.ui.zad10.zad10_fr"
        android:label="@string/z10"
        tools:layout="@layout/fragment_zad10" />
    <fragment
        android:id="@+id/zad11_d"
        android:name="com.example.project_agregator.ui.zad11.zad11_fr"
        android:label="@string/z11"
        tools:layout="@layout/fragment_zad11" />
    <fragment
        android:id="@+id/zad12_d"
        android:name="com.example.project_agregator.ui.zad12.zad12_fr"
        android:label="@string/z12"
        tools:layout="@layout/fragment_zad12" />
    <fragment
        android:id="@+id/zad13"
        android:name="com.example.project_agregator.ui.zad13.zad13"
        android:label="@string/z13"
        tools:layout="@layout/fragment_zad13" />
    <fragment
        android:id="@+id/zad14"
        android:name="com.example.project_agregator.ui.zad14.zad14"
        android:label="@string/z14"
        tools:layout="@layout/fragment_zad14" />
    <fragment
        android:id="@+id/zad15"
        android:name="com.example.project_agregator.ui.zad15.zad15"
        android:label="@string/z15"
        tools:layout="@layout/fragment_zad15" />
    <fragment
        android:id="@+id/zad16"
        android:name="com.example.project_agregator.ui.zad16.zad16"
        android:label="@string/z16"
        tools:layout="@layout/fragment_zad16" />

</navigation>